--- a/parametres.css
+++ b/parametres.css
@@ -8,9 +8,9 @@
 
 
 body {
-    
+
     font-family: 'Roboto', sans-serif;
-    
+
 
 }
 
@@ -64,13 +64,11 @@ body {
     flex-direction: column;
     width: 300px;
     height: 28px;
-    
+
     margin-bottom: 16px;
     line-height: 1.2;
     font-weight: 700;
     font-size: 1.5rem;
-
-
 
 }
 
@@ -113,22 +111,21 @@ button {
 
 label {
 
-
     font-weight: bold;
     font-size: 1rem;
     color: #222222;
     line-height: 1.2;
 }
 
-.menu_add_text{
+.menu_add_text {
     background: none;
     border: none;
     margin: 0;
     padding: 0;
     margin-left: 18px;
     font-weight: 500;
-    color:#222222;
-  }
+    color: #222222;
+}
 
 .labelParametres {
     font-weight: 400;
@@ -170,13 +167,9 @@ input {
 
 }
 
-.mail_form{
+.mail_form {
     margin-bottom: 24px;
 }
-
-/* ::placeholder {
-    padding-left: 16px;
-} */
 
 .containBox {
     display: flex;
@@ -184,31 +177,28 @@ input {
     margin-bottom: 16px;
 }
 
-.nB{
-    
-
-        font-weight: 700;
-        font-size: 0.75;
-        color: #FFFFFF;
-        background-color: #FF7675;
-        padding : 5px 9px;
-        margin : 0;
-        border-radius: 3px;
-    
+.nB {
+    font-weight: 700;
+    font-size: 0.75;
+    color: #FFFFFF;
+    background-color: #FF7675;
+    padding: 5px 9px;
+    margin: 0;
+    border-radius: 3px;
 }
 
-.menu_item{
-    display :flex;
+.menu_item {
+    display: flex;
     margin-bottom: 11px;
-  }
-  
-  .menu_item_text{
+}
+
+.menu_item_text {
     margin: 0;
-    color : #000000;
+    color: #000000;
     flex-grow: 1;
     margin-bottom: 10px;
-  }
-  
+}
+
 
 .nombre {
     width: 7px;
@@ -217,15 +207,15 @@ input {
     padding: 4px;
 }
 
-.menu_add_text{
+.menu_add_text {
     background: none;
     border: none;
     margin: 0;
     padding: 0;
     margin-left: 18px;
     font-weight: 500;
-    color:#222222;
-  }
+    color: #222222;
+}
 
 h1 {
     font-weight: 700;
@@ -267,21 +257,21 @@ h1 {
 
 }
 
-.overlay_menu{
-    
-        width: 100%;
-        height: 100%;
-        display: grid;
-        grid-template-columns: 350px ;
-        position: fixed;
-        top: 0;
-        left: 0;
-        background-color: rgb(0, 0, 0, 0.4);
-        
-      
+.overlay_menu {
+
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 350px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgb(0, 0, 0, 0.4);
+
+
 }
 
-.wrapper2{
+.wrapper2 {
     padding: 13px;
 }
 
@@ -407,9 +397,7 @@ h1 {
 
 .new {
     display: flex;
-    /* align-items: center; */
     justify-content: flex-start;
-    /* gap: 20px; */
     margin-top: 20px;
     padding-left: 0;
     margin-left: 0;
@@ -424,7 +412,6 @@ h1 {
     background-color: #F5F5F5;
     cursor: pointer;
     margin-left: 10px;
-
     padding-left: 10px;
 }
 
@@ -433,21 +420,21 @@ h1 {
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-} 
+}
 
 .fa-solid {
     font-size: 1rem;
     color: #FF7675;
 }
 
-.destopParametres{
+.destopParametres {
     display: none;
 }
 
-.close_button{
+.close_button {
     width: 14px;
     margin-bottom: 38px;
-  }
+}
 
 @media screen and (min-width:1020px) {
 
@@ -458,34 +445,31 @@ h1 {
 
     }
 
-    body{
+    body {
         display: flex;
         background-color: #FDFDFD;
-        
+
     }
-
-
 
     .wrapper {
         display: grid;
         grid-template-columns: 1fr 3fr;
         width: 100%;
-        
-        
+
+
         gap: 50px;
     }
 
-    .overlay_menu{
+    .overlay_menu {
         position: static;
         display: flex;
-        
+
     }
 
-    .hidden{
-        display: flex;  
+    .hidden {
+        display: flex;
     }
 
-    
 
     content {
         flex-direction: column;
@@ -505,39 +489,26 @@ h1 {
         line-height: 16.41px;
         font-weight: bold;
         font-size: 0.875rem;
-        
+
     }
 
     .topBar {
         display: none;
     }
 
-    
-
     .destopParametres {
         display: flex;
         width: 167px;
         height: 38px;
-        
         line-height: 1.2;
         padding-top: 32px;
         padding-bottom: 48px;
     }
 
-    h1{
+    h1 {
         font-weight: 700;
         font-size: 2rem;
     }
-
-    
-
-    
-    
-
-    
-
-
-    
 
     .boxParametres {
         display: flex;
@@ -550,23 +521,14 @@ h1 {
         line-height: 1.2;
     }
 
-    
     .lienIconeParametres {
         top: 34px;
         width: 300px;
         height: 19px;
-
         font-weight: 700;
         font-size: 1rem;
         line-height: 1.2;
-
-
     }
-
-    
-
-    
-
 
     .boxEnd {
         padding-bottom: 19px;
@@ -576,8 +538,6 @@ h1 {
     .boxIcone {
         width: 20px;
         height: 17px;
-
-
     }
 
     .button {
@@ -585,14 +545,9 @@ h1 {
         height: 5px;
     }
 
-    
-
     form * {
-        /* color: #ffffff; */
         letter-spacing: 0.5px;
     }
-
-    
 
     .adresseEmailActuelle {
         width: 500px;
@@ -600,13 +555,12 @@ h1 {
         font-size: 0.875rem;
         line-height: 1.2;
         font-weight: 500;
-
     }
 
-    .close_button, .menu_button{
+    .close_button,
+    .menu_button {
         display: none;
-       
+
     }
 
-    
 }
